<?xml version="1.0" encoding="UTF-8"?>
<!--
  CF Eclipse PARENT POM
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.eclipse.cft.server</groupId>
  <artifactId>org.eclipse.cft.server.parent</artifactId>
  <version>1.2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <scm>
    <connection>scm:git:ssh://git@github.com:eclipse/cft.git</connection>
    <developerConnection>scm:git:ssh://git@github.com:eclipse/cft.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/eclipse/cft</url>
  </scm>

  <modules>
    <module>org.eclipse.cft.server.core.feature</module>
    <module>org.eclipse.cft.server.ui.feature</module>
    <module>org.eclipse.cft.server.core</module>
    <module>org.eclipse.cft.server.rse</module>
    <module>org.eclipse.cft.server.tests</module>
    <module>org.eclipse.cft.server.ui</module>
    <module>org.eclipse.cft.server.verify.ui</module>
    <module>org.eclipse.cft.server.standalone.core</module>
    <module>org.eclipse.cft.server.standalone.ui</module>
    <module>org.eclipse.cft.server.branding.core</module>
    <module>org.eclipse.cft.server.branding.ui</module>
    <module>org.eclipse.cft.server.site</module>
    <module>org.eclipse.cft.server.target</module>
    <module>org.eclipse.cft.server.source</module>
    <module>org.eclipse.cft.server.sdk</module>
    <module>org.eclipse.cft.server.client</module>
    <module>org.eclipse.cft.server.client.feature</module>
  </modules>

  <!-- Common Configuration -->
  <organization>
    <name>Pivotal Software, Inc.</name>
    <url>http://www.pivotal.io</url>
  </organization>
  <url>https://docs.cloudfoundry.org</url>
  <inceptionYear>2013</inceptionYear>

  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>

  <issueManagement>
    <url>https://github.com/eclipse/cft</url>
    <system>GitHub</system>
  </issueManagement>

  <ciManagement>
    <url>https://ci.eclipse.org/cft</url>
    <system>JENKINS</system>
  </ciManagement>


  <properties>
    <!-- CloudFloundry Properties -->
    <p2.qualifier>SNAPSHOT</p2.qualifier>
    <p2.repository.name>Cloud Foundry Tools</p2.repository.name>

    <dist.name>Cloud Foundry Tools</dist.name>
    <dist.project>cft</dist.project>
    <dist.target.classifier>cloudfoundry-${dist.target}</dist.target.classifier>

    <!-- Common Properties -->
    <skip.source.check>true</skip.source.check>

    <test.vmargs>${test.osvmargs}</test.vmargs>
    <test.osvmargs></test.osvmargs>
    <test.useUIThread>true</test.useUIThread>
    <test.skip>${maven.test.skip}</test.skip>

    <tycho-version>1.1.0</tycho-version>
    <tycho-extras-version>${tycho-version}</tycho-extras-version>


    <maven.test.error.ignore>true</maven.test.error.ignore>
    <maven.test.failure.ignore>true</maven.test.failure.ignore>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <encoding>UTF-8</encoding>
  </properties>

  <profiles>

    <profile>
      <id>e43</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <dist.target>e4.3</dist.target>
        <dist.platform.name>Kepler</dist.platform.name>
        <dist.platform.id>kepler</dist.platform.id>
        <dist.platform.version>4.3</dist.platform.version>
        <package.qualifierPrefix>e43</package.qualifierPrefix>
      </properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<target>
						<artifact>
							<groupId>org.eclipse.cft.server</groupId>
							<artifactId>org.eclipse.cft.server.target</artifactId>
							<version>1.0.0-SNAPSHOT</version>
							<classifier>${dist.target.classifier}</classifier>
						</artifact>
					</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

    </profile>

	<profile>
		<id>e46</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 4.6</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>platform-e46</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/eclipse/updates/4.6/</url>
			</repository>
			<repository>
				<id>neon</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/neon/</url>
			</repository>
			<repository>
				<id>orbit-neon</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20160520211859/repository/</url>
			</repository>
		</repositories>
	</profile>

	<profile>
		<id>e47</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 4.7</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>platform-e47</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/eclipse/updates/4.7/</url>
			</repository>
			<repository>
				<id>oxygen</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/oxygen/</url>
			</repository>
			<repository>
				<id>orbit-oxygen</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/R-builds/R20170516192513/repository/</url>
			</repository>
		</repositories>
	</profile>
	
	<profile>
		<id>e48</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 4.8</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>platform-e48</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/photon/</url>
			</repository>
			<repository>
				<id>photon</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/staging/photon/</url>
			</repository>
			<repository>
				<id>orbit-oxygen</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20180606145124/repository</url>
			</repository>
		</repositories>
	</profile>

  <profile>
		<id>e410</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 2018-12</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>platform-e410</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/eclipse/updates/4.10/</url>
			</repository>
			<repository>
				<id>2018-12</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2018-12/</url>
			</repository>
			<repository>
				<id>orbit-2018-12</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20181128170323/repository</url>
			</repository>
		</repositories>
	</profile>

  <profile>
		<id>e411</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 2019-03</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>2019-03</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2019-03/</url>
			</repository>
			<repository>
				<id>orbit</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20190226160451/repository</url>
			</repository>
		</repositories>
	</profile>

	  <profile>
		<id>e412</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 2019-06</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>2019-06</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2019-06/</url>
			</repository>
			<repository>
				<id>orbit</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20190602212107/repository</url>
			</repository>
		</repositories>
	</profile>


	<profile>
		<id>e414</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 2019-12</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>2019-12</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2019-12/</url>
			</repository>
			<repository>
				<id>orbit</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20191126223242/repository</url>
			</repository>
		</repositories>
	</profile>

	<profile>
		<id>e416</id>
		<properties>
			<p2.repository.name>CFT for Eclipse 2020-06</p2.repository.name>
		</properties>
		<repositories>
			<repository>
				<id>2020-06</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/staging/2020-06/</url>
			</repository>
			<repository>
				<id>orbit</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/tools/orbit/downloads/drops/S20200406151314/repository</url>
			</repository>
		</repositories>
	</profile>

    <profile>
      <id>osx</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>https://www.apple.com/</value>
        </property>
      </activation>
      <properties>
        <test.osvmargs>-Dosgi.ws=cocoa -XstartOnFirstThread</test.osvmargs>
      </properties>
    </profile>

     <profile>
        <id>eclipse-sign</id>
        <build>
          <plugins>
            <plugin>
              <groupId>org.eclipse.tycho</groupId>
              <artifactId>target-platform-configuration</artifactId>
              <configuration>
                <includePackedArtifacts>true</includePackedArtifacts>
              </configuration>
            </plugin>
            <plugin>
              <groupId>org.eclipse.cbi.maven.plugins</groupId>
              <artifactId>eclipse-jarsigner-plugin</artifactId>
              <executions>
                <execution>
                  <id>sign</id>
                  <goals>
                    <goal>sign</goal>
                  </goals>
                  <phase>verify</phase>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.eclipse.tycho</groupId>
              <artifactId>tycho-p2-plugin</artifactId>
              <executions>
                <execution>
                  <id>p2-metadata</id>
                  <goals>
                    <goal>p2-metadata</goal>
                  </goals>
                  <phase>verify</phase>
                </execution>
              </executions>
              <configuration>
                <defaultP2Metadata>false</defaultP2Metadata>
              </configuration>
            </plugin>
          </plugins>
        </build>
      </profile>

  </profiles>

  <repositories>
    <!-- required for Maven and Ant AWS dependency -->
    <repository>
      <id>springsource-maven-release</id>
      <name>SpringSource Maven Release Repository</name>
      <url>https://repository.springsource.com/maven/bundles/release</url>
    </repository>
    <!-- required for commons-cli dependency in c.s.sts.grails.core -->
    <repository>
      <id>apache-release</id>
      <url>https://repository.apache.org/content/repositories/releases/</url>
    </repository>
    <repository>
      <id>maven-mirror</id>
      <url>https://repo.exist.com/maven2</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <!-- required for Maven and Ant AWS dependency -->
    <pluginRepository>
      <id>spring-maven-release</id>
      <name>Spring Maven Release Repository</name>
      <url>https://maven.springframework.org/release</url>
    </pluginRepository>
    <pluginRepository>
      <id>springsource-maven-release</id>
      <name>SpringSource Maven Release Repository</name>
      <url>https://repository.springsource.com/maven/bundles/release</url>
    </pluginRepository>
    <pluginRepository>
        <id>repo.eclipse.org.cbi-releases</id>
        <url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
    </pluginRepository>
  </pluginRepositories>

  <build>

    <plugins>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.1.1</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>git</executable>
          <arguments>
            <argument>log</argument>
            <argument>--pretty=format:source.control.id=%H</argument>
            <argument>-n1</argument>
          </arguments>
          <outputFile>${project.build.directory}/git.properties</outputFile>
          <successCodes>
            <successCode>0</successCode>
            <successCode>1</successCode>
            <successCode>127</successCode>
            <successCode>128</successCode>
          </successCodes>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
        </configuration>
      </plugin>

    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <resolver>p2</resolver>
            <pomDependencies>consider</pomDependencies>
            <ignoreTychoRepositories>true</ignoreTychoRepositories>
            <environments>
              <environment>
                <os>macosx</os>
                <ws>cocoa</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>win32</os>
                <ws>win32</ws>
                <arch>x86_64</arch>
              </environment> 
              <environment>
                <os>linux</os>
                <ws>gtk</ws>
                <arch>x86_64</arch>
              </environment>
            </environments>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <format>'v'yyyyMMddHHmm</format>
            <archiveSite>true</archiveSite>
            <archive>
              <manifestEntries>
                <Source-Control-Identifier>${source.control.id}</Source-Control-Identifier>
              </manifestEntries>
              <addMavenDescriptor>false</addMavenDescriptor>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.4.3</version>
          <configuration>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.6</version>
          <dependencies>
            <dependency>
              <groupId>ant-contrib</groupId>
              <artifactId>ant-contrib</artifactId>
              <version>1.0b3</version>
              <exclusions>
                <exclusion>
                  <groupId>ant</groupId>
                  <artifactId>ant</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
            <dependency>
              <groupId>org.apache.ant</groupId>
              <artifactId>ant-nodeps</artifactId>
              <version>1.8.1</version>
            </dependency>
            <dependency>
              <groupId>org.springframework.build</groupId>
              <artifactId>org.springframework.build.aws.ant</artifactId>
              <version>3.0.6.RELEASE</version>
            </dependency>
            <dependency>
              <groupId>net.java.dev.jets3t</groupId>
              <artifactId>jets3t</artifactId>
              <version>0.8.1</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <sourceEncoding>utf-8</sourceEncoding>
            <minimumTokens>100</minimumTokens>
            <targetJdk>1.8</targetJdk>
            <format>xml</format>
            <failOnViolation>false</failOnViolation>
            <skip>${skip-source-check}</skip>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>cpd-check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <skip>${test.skip}</skip>
            <useUIThread>${test.useUIThread}</useUIThread>
            <useUIHarness>true</useUIHarness>
            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
            <showEclipseLog>true</showEclipseLog>
            <testSuite>${project.artifactId}</testSuite>
            <testClass>${test.class}</testClass>
            <argLine>
              -Xmx1024m -XX:MaxPermSize=256m -Dtest.credentials=${bamboo.sts.cf.properties} -Djava.io.tmpdir=${project.build.directory} -Duser.home=${project.build.directory} ${test.vmargs}
            </argLine>
            <appArgLine>
              -eclipse.keyring ${project.build.directory}/keystore -eclipse.password ${project.build.directory}/keystore.password
            </appArgLine>
            <dependencies>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.wst.server_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.jst.web_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.jst.enterprise_ui.feature.feature.group</artifactId>
                <version>0.0.0</version>
              </dependency>
            </dependencies>
          </configuration>
        </plugin>
        <plugin>
	          <groupId>org.eclipse.cbi.maven.plugins</groupId>
	          <artifactId>eclipse-jarsigner-plugin</artifactId>
	          <version>1.0.4</version>
	     </plugin>
	     <plugin>
	          <groupId>org.eclipse.tycho</groupId>
	          <artifactId>tycho-p2-plugin</artifactId>
	          <version>${tycho-version}</version>
	     </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
